# ProyectoGlobal

./: Cucumber  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
config/: config.ts
pages/: base_page.py  base_page.ts  consulta_page.py  consulta_page.ts  cotizar_page.py  cotizar_page.ts  financiero_page.py  financiero_page.ts  form_page.py  form_page.ts  metas_pages.ts  personal_form_page.py  personal_form_page.ts  producto_page.py  producto_page.ts
support/: hooks.ts
tests/: test_persona_mayor.py  tsconfig.json
tests/features/: Hu001.feature  flujo_regreso.feature  test_persona_mayor.feature
tests/steps/: Hu001.ts  flujo_regreso.steps.ts  flujo_regreso.ts  test_persona_mayor.ts
tests/support/: hooks.ts
utils/: helpers.ts
