[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proyectoglobal"
version = "0.1.0"
description = "Proyecto Global con pages y tests"
authors = [
  { name = "Cata", email = "tu_correo@example.com" }
]
readme = "README.md"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
